--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "add-dom-event-listener": "^1.1.0",
+    "ant-design-vue": "^1.4.6",
     "classnames": "^2.2.6",
     "core-js": "^3.3.2",
     "dom-align": "^1.10.2",
@@ -24,6 +25,8 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
