--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.3.2",
     "dom-align": "^1.10.2",
     "lodash": "^4.17.15",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-ref": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
